Fix selection by scrolling adding z-index

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -760,6 +760,7 @@ body {
 
 .navbar-scroll {
   position: fixed;
+  z-index: 50;
   top: 0;
   left: 0;
   width: 100%;
