--- a/scss/modules/_navbar.scss
+++ b/scss/modules/_navbar.scss
@@ -1,5 +1,6 @@
 .navbar-scroll {
     position: fixed;
+    z-index: 50;
     top: 0;
     left: 0;
     width: 100%;
